[package]
name = "threed_testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
three-d = { version = "0.15.0", features = ["egui-gui"] }
three-d-asset = { version = "0.5", features = ["hdr", "gltf", "obj", "vol", "pcd", "png", "jpeg", "http", "data-url"] }
tokio = { version = "1.26.0", features = ["full"] }
